# nvclocktop

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml
docs/: RELEASE_NOTES.md
scripts/: configure_github_repo.sh  render_readme_assets.py  set_pypi_github_secret.sh
src/gpu_clock/: __init__.py  __main__.py  app.py  cli.py  cpu.py  figlet.py  gpu.py  layout.py  theme.py
src/gpu_clock/fonts/: README.md
tests/: test_app.py  test_cli.py  test_cpu.py  test_figlet.py  test_gpu.py  test_layout.py  test_theme.py
